--- a/package.json
+++ b/package.json
@@ -5,27 +5,30 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "webhooks": "stripe listen --forward-to localhost:3000/api/webhooks"
   },
   "dependencies": {
-    "@prismicio/client": "^4.0.0",
-    "@stripe/stripe-js": "^1.13.2",
+    "@prismicio/client": "^5.1.0",
+    "@stripe/stripe-js": "^1.16.0",
     "axios": "^0.21.1",
-    "faunadb": "^4.1.3",
-    "next": "10.0.9",
-    "next-auth": "^3.13.3",
-    "prismic-dom": "^2.2.5",
+    "faunadb": "^4.3.0",
+    "next": "11.0.1",
+    "next-auth": "^3.27.3",
+    "prismic-dom": "^2.2.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "sass": "^1.32.8",
-    "stripe": "^8.140.0"
+    "sass": "^1.35.2",
+    "stripe": "^8.165.0"
   },
   "devDependencies": {
-    "@types/next-auth": "^3.13.0",
-    "@types/node": "^14.14.37",
+    "@types/node": "^16.3.3",
     "@types/prismic-dom": "^2.1.1",
-    "@types/react": "^17.0.3",
-    "typescript": "^4.2.3"
+    "@types/react": "^17.0.14",
+    "eslint": "7.30.0",
+    "eslint-config-next": "11.0.1",
+    "typescript": "^4.3.5"
   }
 }
